# easyPOS

./: .gitignore  BUILD_DEB.md  CMakeLists.txt  README.md  build_deb.sh  database.backup  easyPOS_en.ts  easyPOS_ru_RU.ts  easyposcore.cpp  easyposcore.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  translationutils.h
RBAC/: accountmanager.cpp  accountmanager.h  authmanager.cpp  authmanager.h  rolemanager.cpp  rolemanager.h  structures.h
alerts/: alertkeys.h  alertsmanager.cpp  alertsmanager.h  structures.h
db/: databaseconnection.cpp  databaseconnection.h  migrate_add_reservedquantity.sql  seed_goods.sql  seed_sales_test.sql  structures.h
debian/: changelog  control  copyright  debhelper-build-stamp  easypos.desktop  easypos.install  easypos.substvars  files  rules
debian/.debhelper/easypos/: dbgsym-build-ids
debian/.debhelper/easypos/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/easypos/dbgsym-root/usr/share/doc/: easypos-dbgsym
docs/: RBAC_ACCESS_GUIDE.md
employees/: employeemanager.cpp  employeemanager.h  positionmanager.cpp  positionmanager.h  structures.h
goods/: categorymanager.cpp  categorymanager.h  structures.h
logging/: logmanager.cpp  logmanager.h
production/: productionmanager.cpp  productionmanager.h  structures.h
promotions/: promotionmanager.cpp  promotionmanager.h  structures.h
reports/: abstractreport.h  abstractreportexporter.h  csvreportexporter.cpp  csvreportexporter.h  odtreportexporter.cpp  odtreportexporter.h  pdfreportexporter.cpp  pdfreportexporter.h  reportdata.h  reportmanager.cpp  reportmanager.h  wordreportexporter.cpp  wordreportexporter.h
sales/: README.md  salesmanager.cpp  salesmanager.h  stockmanager.cpp  stockmanager.h  structures.h
settings/: settingsmanager.cpp  settingsmanager.h
shifts/: shiftmanager.cpp  shiftmanager.h  structures.h
styles/: green_dark.qss  green_light.qss
ui/: REFERENCE_DIALOGS.md  REFERENCE_FEATURES.md  alertsdialog.cpp  alertsdialog.h  alertsdialog.ui  authwindow.cpp  authwindow.h  authwindow.ui  batcheditdialog.cpp  batcheditdialog.h  batcheditdialog.ui  categoryeditdialog.cpp  categoryeditdialog.h  categoryeditdialog.ui  checkdetailsdialog.cpp  checkdetailsdialog.h  checkdetailsdialog.ui  checkexporter.cpp  checkexporter.h  checkhistorydialog.cpp  checkhistorydialog.h  checkhistorydialog.ui  checkpdfexporter.cpp  checkpdfexporter.h  dbsettingsdialog.cpp  dbsettingsdialog.h  dbsettingsdialog.ui  discountdialog.cpp  discountdialog.h  discountdialog.ui  employeeeditdialog.cpp  employeeeditdialog.h  employeeeditdialog.ui  employeesdialog.cpp  employeesdialog.h  goodcatsdialog.cpp  goodcatsdialog.h  goodeditdialog.cpp  goodeditdialog.h  goodeditdialog.ui  (+71 more)
ui/sales/: goodfind.cpp  goodfind.h  goodfind.ui
unit_tests/: main.cpp  test_AccountManager.cpp  test_AccountManager.h  test_AuthManager.cpp  test_AuthManager.h  test_RoleManager.cpp  test_RoleManager.h  test_SalesManager.cpp  test_SalesManager.h  test_SettingsManager.cpp  test_SettingsManager.h  test_StockManager.cpp  test_StockManager.h  test_databaseconnection.cpp  test_databaseconnection.h
